--- a/css/modalGallery.css
+++ b/css/modalGallery.css
@@ -68,14 +68,17 @@
 .modalScroll {
     width: calc(100% - 2*var(--padding));
     height: calc(100% - var(--header));
-    ;
+    display: flex;
+    flex-direction: column;
     padding: 0 var(--padding);
     overflow: auto;
 }
 
 .imageModal {
     width: 100%;
+    max-height: 100%;
     padding-bottom: 5px;
+    object-fit: contain;
 }
 
 .galleryContainer:hover {
