--- a/css/accueil.css
+++ b/css/accueil.css
@@ -36,8 +36,17 @@
     justify-content: center;
 }
 
+h2 {
+    margin-left: 10px;
+}
+
 @media (max-width:1023px) {
     .quickView {
         width: 100%;
+    }
+
+    h2 {
+        text-align: center;
+        margin-left: 0;
     }
 }
