--- a/css/board.css
+++ b/css/board.css
@@ -1,9 +1,18 @@
-.board {
+.firstSection {
     margin-top: var(--heightHeader);
 }
 
-.reactContainer {
+section {
     width: calc(100% - var(--widthMenu));
+    --marginBoard: 23px;
+}
+
+h2 {
+    margin-left: var(--marginBoard);
+}
+
+.reactContainer {
+    width: 100%;
 }
 
 .boardContainer {
@@ -13,12 +22,47 @@
 }
 
 .boardErsatz {
-    width: 320px;
+    width: 510px;
     margin: 0 23px;
 }
 
+.rowClub {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--colorConstrast);
+}
+
+.colClub {
+    --widthCol: 50%;
+    width: calc(var(--widthCol) - var(--marginBoard));
+}
+
+.addressClub {
+    text-align: center;
+
+}
+
+.imgClub {
+    object-fit: contain;
+}
+
 @media (max-width:1023px) {
-    .reactContainer {
+    section {
         width: 100%;
     }
+
+    .boardErsatz {
+        display: none;
+    }
+
+    .rowClub {
+        flex-direction: column;
+    }
+
+    .colClub {
+        --widthCol: 100%;
+    }
+
+
 }
