--- a/css/admin.css
+++ b/css/admin.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: row;
     gap: var(--padding);
+    flex-wrap: inherit;
 }
 
 .imageContainer {
@@ -217,6 +218,7 @@ input {
 .editModal .cardMember {
     --padding: 10px;
     box-shadow: none;
+    max-height: calc(90vh - 92px);
     height: auto;
     width: calc(100% - 2* var(--padding));
     margin: 0;
