--- a/css/cardMember.css
+++ b/css/cardMember.css
@@ -12,7 +12,7 @@
 }
 
 .pictMember {
-    height: 100%;
+    min-height: 100%;
     border-radius: 5px;
     width: var(--widthPict);
     object-fit: cover;
