--- a/css/event.css
+++ b/css/event.css
@@ -1,8 +1,7 @@
 .event {
     display: flex;
     border-radius: 1000px;
-    padding: 2px;
-    padding-left: 10px;
+    padding: 2px 10px;
     max-width: fit-content;
     margin-bottom: 2px;
     box-shadow: -1px 1px var(--boxShadowColor);
