--- a/css/modalGallery.css
+++ b/css/modalGallery.css
@@ -96,8 +96,7 @@
 }
 
 .imageErsatz {
-    width: 369px;
-    padding: var(--imgPadding);
+    width: 379px;
 }
 
 .imageModal {
@@ -148,6 +147,14 @@
 
 .downloadButton {
     background-color: var(--colorBackground);
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: -1px 1px var(--boxShadowColor);
+}
+
+.downloadButtonDisabled {
+    background-color: var(--boxShadowColor);
     padding: 5px;
     cursor: pointer;
     border-radius: 5px;
