download handle by a <a> zipfile create with the gallery and overwrite when the gallery is modified

--- a/css/modalGallery.css
+++ b/css/modalGallery.css
@@ -146,6 +146,8 @@
 }
 
 .downloadButton {
+    text-decoration: inherit;
+    color: inherit;
     background-color: var(--colorBackground);
     padding: 5px;
     cursor: pointer;
