--- a/css/modalGallery.css
+++ b/css/modalGallery.css
@@ -109,10 +109,15 @@
     cursor: pointer;
 }
 
-.imageFull {
+.fullScreenContainer {
+    position: relative;
+}
+
+.swiper-container,
+.swiper-wrapper,
+.swiper-slide {
     width: 100%;
     height: 100%;
-    object-fit: contain;
 }
 
 .galleryDisplay {
@@ -173,6 +178,7 @@
     cursor: pointer;
     position: absolute;
     right: 0;
+    z-index: 2;
 }
 
 .controlrightFull {
