--- a/css/menu.css
+++ b/css/menu.css
@@ -1,8 +1,10 @@
 body {
     --widthMenu: 230px;
     --heightHeader: 51px;
-    --boxShadowColor: #00912C;
-    --colorBackground: #FFA20C;
+    --colorMain: #FFA20C;
+    --colorSecond: #00912C;
+    --boxShadowColor: rgba(0,145,44,0.69);
+    --colorBackground: var(--colorMain);
     --colorConstrast: rgba(240, 248, 255,0.9);
     --colorText: black;
     --colorTextConstrast: white;
@@ -166,8 +168,54 @@ h1 {
 }
 
 
+@media only screen and (max-width:1023px) and (orientation:landscape) {
+    .generalMenu {
+        display: none;
+        background-color: var(--colorBackground);
+        width: auto;
+        height: fit-content;
+        overflow: auto;
+        max-height: calc(100% - var(--heightHeader));
+    }
 
-@media (max-width:1023px) {
+    .menu-button-container {
+        display: flex;
+    }
+
+    #menu-toggle:checked~.generalMenu {
+        display: block;
+    }
+
+    .menu-button-container {
+        --sizeButton:42px;
+        --marginButton:12px;
+        width: var(--sizeButton);
+    }
+
+    .menu-button,
+    .menu-button::before,
+    .menu-button::after {
+        position: absolute;
+        height: 5px;
+        width: var(--sizeButton);
+        /* transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1); */
+        border-radius: 2px;
+    }
+
+    .menu-button::before {
+        margin-top: calc(-1 * var(--marginButton));
+    }
+
+    .menu-button::after {
+        margin-top: var(--marginButton);
+    }
+
+    .logo {
+        display: none;
+    }
+}
+
+@media only screen and (max-width:1023px) and (orientation:portrait) {
     body {
         --fontMobile: 42px;
         font-size: var(--fontMobile);
