--- a/css/accueil.css
+++ b/css/accueil.css
@@ -40,7 +40,13 @@ h2 {
     margin-left: 10px;
 }
 
-@media (max-width:1023px) {
+@media only screen and (max-width:1023px) and (orientation:landscape) {
+    .quickView {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:1023px) and (orientation:portrait) {
     .quickView {
         width: 100%;
     }
