--- a/css/board.css
+++ b/css/board.css
@@ -47,7 +47,13 @@ h2 {
     object-fit: contain;
 }
 
-@media (max-width:1023px) {
+@media only screen and (max-width:1023px) and (orientation:landscape) {
+    main {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:1023px) and (orientation:portrait) {
     main {
         width: 100%;
     }
