--- a/css/cardMember.css
+++ b/css/cardMember.css
@@ -42,7 +42,7 @@
     margin-right: 5px;
 }
 
-@media (max-width:1023px) {
+@media only screen and (max-width:1023px) and (orientation:portrait) {
     .cardMember {
         --space: 23px;
         width: calc(100% - 4* var(--space));
