--- a/css/galleries.css
+++ b/css/galleries.css
@@ -14,7 +14,13 @@
     margin: 0 23px;
 }
 
-@media (max-width:1023px) {
+@media only screen and (max-width:1023px) and (orientation:landscape) {
+    .reactContainer {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:1023px) and (orientation:portrait) {
     .reactContainer {
         width: 100%;
     }
