--- a/css/info.css
+++ b/css/info.css
@@ -14,7 +14,7 @@
 }
 
 
-@media (max-width:1023px) {
+@media only screen and (max-width:1023px) and (orientation:portrait) {
     .ql-container {
         font-size: var(--fontMobile);
     }
